backend/src/analyzer/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ADD
    CAT
    CHGRP
    DELETE
    EDIT
    EXECUTE
    FS
    REMOVE
    RENAME
    UNMOUNT

Grammar

Rule 0     S' -> begin
Rule 1     begin -> command
Rule 2     command -> MKDISK mkdisk_parameters
Rule 3     command -> RMDISK rmdisk_parameter
Rule 4     command -> FDISK fdisk_parameters
Rule 5     command -> MOUNT mount_parameters
Rule 6     command -> MKFS mkfs_parameters
Rule 7     command -> LOGIN login_parameters
Rule 8     command -> LOGOUT
Rule 9     command -> MKGRP mkgrp_parameter
Rule 10    command -> RMGRP rmgrp_parameter
Rule 11    command -> MKUSR mkusr_parameters
Rule 12    command -> RMUSR rmusr_parameter
Rule 13    command -> MKFILE mkfile_parameters
Rule 14    command -> MKDIR mkdir_parameters
Rule 15    command -> PAUSE
Rule 16    command -> REP rep_parameters
Rule 17    mkdisk_parameters -> mkdisk_parameter mkdisk_parameters
Rule 18    mkdisk_parameters -> mkdisk_parameter
Rule 19    mkdisk_parameter -> DASH SIZE EQUAL NUMBER
Rule 20    mkdisk_parameter -> DASH PATH EQUAL string_parameter
Rule 21    mkdisk_parameter -> DASH FIT EQUAL fit_parameter
Rule 22    mkdisk_parameter -> DASH UNIT EQUAL unit_parameter
Rule 23    rmdisk_parameter -> DASH PATH EQUAL string_parameter
Rule 24    fdisk_parameters -> fdisk_parameter fdisk_parameters
Rule 25    fdisk_parameters -> fdisk_parameter
Rule 26    fdisk_parameter -> DASH SIZE EQUAL NUMBER
Rule 27    fdisk_parameter -> DASH PATH EQUAL string_parameter
Rule 28    fdisk_parameter -> DASH NAME EQUAL string_parameter
Rule 29    fdisk_parameter -> DASH UNIT EQUAL unit_parameter
Rule 30    fdisk_parameter -> DASH TYPE EQUAL type_parameter
Rule 31    fdisk_parameter -> DASH FIT EQUAL fit_parameter
Rule 32    mount_parameters -> mount_parameter mount_parameters
Rule 33    mount_parameters -> mount_parameter
Rule 34    mount_parameter -> DASH PATH EQUAL string_parameter
Rule 35    mount_parameter -> DASH NAME EQUAL string_parameter
Rule 36    mkfs_parameters -> mkfs_parameter mkfs_parameters
Rule 37    mkfs_parameters -> mkfs_parameter
Rule 38    mkfs_parameter -> DASH ID EQUAL id_parameter
Rule 39    mkfs_parameter -> DASH TYPE EQUAL FULL
Rule 40    login_parameters -> login_parameter login_parameters
Rule 41    login_parameters -> login_parameter
Rule 42    login_parameter -> DASH USER EQUAL string_parameter
Rule 43    login_parameter -> DASH PASS EQUAL pass_parameter
Rule 44    login_parameter -> DASH ID EQUAL id_parameter
Rule 45    mkgrp_parameter -> DASH NAME EQUAL string_parameter
Rule 46    rmgrp_parameter -> DASH NAME EQUAL string_parameter
Rule 47    mkusr_parameters -> mkusr_parameter mkusr_parameters
Rule 48    mkusr_parameters -> mkusr_parameter
Rule 49    mkusr_parameter -> DASH USER EQUAL string_parameter
Rule 50    mkusr_parameter -> DASH PASS EQUAL pass_parameter
Rule 51    mkusr_parameter -> DASH GRP EQUAL string_parameter
Rule 52    rmusr_parameter -> DASH USER EQUAL string_parameter
Rule 53    mkfile_parameters -> mkfile_parameter mkfile_parameters
Rule 54    mkfile_parameters -> mkfile_parameter
Rule 55    mkfile_parameter -> DASH PATH EQUAL string_parameter
Rule 56    mkfile_parameter -> DASH R
Rule 57    mkfile_parameter -> DASH SIZE EQUAL NUMBER
Rule 58    mkfile_parameter -> DASH CONT EQUAL string_parameter
Rule 59    mkdir_parameters -> mkdir_parameter mkdir_parameters
Rule 60    mkdir_parameters -> mkdir_parameter
Rule 61    mkdir_parameter -> DASH PATH EQUAL string_parameter
Rule 62    mkdir_parameter -> DASH R
Rule 63    rep_parameters -> rep_parameter rep_parameters
Rule 64    rep_parameters -> rep_parameter
Rule 65    rep_parameter -> DASH NAME EQUAL string_parameter
Rule 66    rep_parameter -> DASH PATH EQUAL string_parameter
Rule 67    rep_parameter -> DASH ID EQUAL id_parameter
Rule 68    rep_parameter -> DASH RUTA EQUAL string_parameter
Rule 69    string_parameter -> STRING
Rule 70    string_parameter -> QUOTED_STRING
Rule 71    string_parameter -> FILE
Rule 72    unit_parameter -> B
Rule 73    unit_parameter -> K
Rule 74    unit_parameter -> M
Rule 75    type_parameter -> P
Rule 76    type_parameter -> E
Rule 77    type_parameter -> L
Rule 78    fit_parameter -> BF
Rule 79    fit_parameter -> FF
Rule 80    fit_parameter -> WF
Rule 81    delete_parameter -> FULL
Rule 82    add_parameter -> NUMBER
Rule 83    id_parameter -> IDENTIFIER
Rule 84    fs_parameter -> 2FS
Rule 85    fs_parameter -> 3FS
Rule 86    pass_parameter -> STRING
Rule 87    pass_parameter -> QUOTED_STRING
Rule 88    pass_parameter -> NUMBER

Terminals, with rules where they appear

2FS                  : 84
3FS                  : 85
ADD                  : 
B                    : 72
BF                   : 78
CAT                  : 
CHGRP                : 
CONT                 : 58
DASH                 : 19 20 21 22 23 26 27 28 29 30 31 34 35 38 39 42 43 44 45 46 49 50 51 52 55 56 57 58 61 62 65 66 67 68
DELETE               : 
E                    : 76
EDIT                 : 
EQUAL                : 19 20 21 22 23 26 27 28 29 30 31 34 35 38 39 42 43 44 45 46 49 50 51 52 55 57 58 61 65 66 67 68
EXECUTE              : 
FDISK                : 4
FF                   : 79
FILE                 : 71
FIT                  : 21 31
FS                   : 
FULL                 : 39 81
GRP                  : 51
ID                   : 38 44 67
IDENTIFIER           : 83
K                    : 73
L                    : 77
LOGIN                : 7
LOGOUT               : 8
M                    : 74
MKDIR                : 14
MKDISK               : 2
MKFILE               : 13
MKFS                 : 6
MKGRP                : 9
MKUSR                : 11
MOUNT                : 5
NAME                 : 28 35 45 46 65
NUMBER               : 19 26 57 82 88
P                    : 75
PASS                 : 43 50
PATH                 : 20 23 27 34 55 61 66
PAUSE                : 15
QUOTED_STRING        : 70 87
R                    : 56 62
REMOVE               : 
RENAME               : 
REP                  : 16
RMDISK               : 3
RMGRP                : 10
RMUSR                : 12
RUTA                 : 68
SIZE                 : 19 26 57
STRING               : 69 86
TYPE                 : 30 39
UNIT                 : 22 29
UNMOUNT              : 
USER                 : 42 49 52
WF                   : 80
error                : 

Nonterminals, with rules where they appear

add_parameter        : 
begin                : 0
command              : 1
delete_parameter     : 
fdisk_parameter      : 24 25
fdisk_parameters     : 4 24
fit_parameter        : 21 31
fs_parameter         : 
id_parameter         : 38 44 67
login_parameter      : 40 41
login_parameters     : 7 40
mkdir_parameter      : 59 60
mkdir_parameters     : 14 59
mkdisk_parameter     : 17 18
mkdisk_parameters    : 2 17
mkfile_parameter     : 53 54
mkfile_parameters    : 13 53
mkfs_parameter       : 36 37
mkfs_parameters      : 6 36
mkgrp_parameter      : 9
mkusr_parameter      : 47 48
mkusr_parameters     : 11 47
mount_parameter      : 32 33
mount_parameters     : 5 32
pass_parameter       : 43 50
rep_parameter        : 63 64
rep_parameters       : 16 63
rmdisk_parameter     : 3
rmgrp_parameter      : 10
rmusr_parameter      : 12
string_parameter     : 20 23 27 28 34 35 42 45 46 49 51 52 55 58 61 65 66 68
type_parameter       : 30
unit_parameter       : 22 29

Parsing method: LALR

state 0

    (0) S' -> . begin
    (1) begin -> . command
    (2) command -> . MKDISK mkdisk_parameters
    (3) command -> . RMDISK rmdisk_parameter
    (4) command -> . FDISK fdisk_parameters
    (5) command -> . MOUNT mount_parameters
    (6) command -> . MKFS mkfs_parameters
    (7) command -> . LOGIN login_parameters
    (8) command -> . LOGOUT
    (9) command -> . MKGRP mkgrp_parameter
    (10) command -> . RMGRP rmgrp_parameter
    (11) command -> . MKUSR mkusr_parameters
    (12) command -> . RMUSR rmusr_parameter
    (13) command -> . MKFILE mkfile_parameters
    (14) command -> . MKDIR mkdir_parameters
    (15) command -> . PAUSE
    (16) command -> . REP rep_parameters

    MKDISK          shift and go to state 3
    RMDISK          shift and go to state 4
    FDISK           shift and go to state 5
    MOUNT           shift and go to state 6
    MKFS            shift and go to state 7
    LOGIN           shift and go to state 8
    LOGOUT          shift and go to state 9
    MKGRP           shift and go to state 10
    RMGRP           shift and go to state 11
    MKUSR           shift and go to state 12
    RMUSR           shift and go to state 13
    MKFILE          shift and go to state 14
    MKDIR           shift and go to state 15
    PAUSE           shift and go to state 16
    REP             shift and go to state 17

    begin                          shift and go to state 1
    command                        shift and go to state 2

state 1

    (0) S' -> begin .



state 2

    (1) begin -> command .

    $end            reduce using rule 1 (begin -> command .)


state 3

    (2) command -> MKDISK . mkdisk_parameters
    (17) mkdisk_parameters -> . mkdisk_parameter mkdisk_parameters
    (18) mkdisk_parameters -> . mkdisk_parameter
    (19) mkdisk_parameter -> . DASH SIZE EQUAL NUMBER
    (20) mkdisk_parameter -> . DASH PATH EQUAL string_parameter
    (21) mkdisk_parameter -> . DASH FIT EQUAL fit_parameter
    (22) mkdisk_parameter -> . DASH UNIT EQUAL unit_parameter

    DASH            shift and go to state 20

    mkdisk_parameters              shift and go to state 18
    mkdisk_parameter               shift and go to state 19

state 4

    (3) command -> RMDISK . rmdisk_parameter
    (23) rmdisk_parameter -> . DASH PATH EQUAL string_parameter

    DASH            shift and go to state 22

    rmdisk_parameter               shift and go to state 21

state 5

    (4) command -> FDISK . fdisk_parameters
    (24) fdisk_parameters -> . fdisk_parameter fdisk_parameters
    (25) fdisk_parameters -> . fdisk_parameter
    (26) fdisk_parameter -> . DASH SIZE EQUAL NUMBER
    (27) fdisk_parameter -> . DASH PATH EQUAL string_parameter
    (28) fdisk_parameter -> . DASH NAME EQUAL string_parameter
    (29) fdisk_parameter -> . DASH UNIT EQUAL unit_parameter
    (30) fdisk_parameter -> . DASH TYPE EQUAL type_parameter
    (31) fdisk_parameter -> . DASH FIT EQUAL fit_parameter

    DASH            shift and go to state 25

    fdisk_parameters               shift and go to state 23
    fdisk_parameter                shift and go to state 24

state 6

    (5) command -> MOUNT . mount_parameters
    (32) mount_parameters -> . mount_parameter mount_parameters
    (33) mount_parameters -> . mount_parameter
    (34) mount_parameter -> . DASH PATH EQUAL string_parameter
    (35) mount_parameter -> . DASH NAME EQUAL string_parameter

    DASH            shift and go to state 28

    mount_parameters               shift and go to state 26
    mount_parameter                shift and go to state 27

state 7

    (6) command -> MKFS . mkfs_parameters
    (36) mkfs_parameters -> . mkfs_parameter mkfs_parameters
    (37) mkfs_parameters -> . mkfs_parameter
    (38) mkfs_parameter -> . DASH ID EQUAL id_parameter
    (39) mkfs_parameter -> . DASH TYPE EQUAL FULL

    DASH            shift and go to state 31

    mkfs_parameters                shift and go to state 29
    mkfs_parameter                 shift and go to state 30

state 8

    (7) command -> LOGIN . login_parameters
    (40) login_parameters -> . login_parameter login_parameters
    (41) login_parameters -> . login_parameter
    (42) login_parameter -> . DASH USER EQUAL string_parameter
    (43) login_parameter -> . DASH PASS EQUAL pass_parameter
    (44) login_parameter -> . DASH ID EQUAL id_parameter

    DASH            shift and go to state 34

    login_parameters               shift and go to state 32
    login_parameter                shift and go to state 33

state 9

    (8) command -> LOGOUT .

    $end            reduce using rule 8 (command -> LOGOUT .)


state 10

    (9) command -> MKGRP . mkgrp_parameter
    (45) mkgrp_parameter -> . DASH NAME EQUAL string_parameter

    DASH            shift and go to state 36

    mkgrp_parameter                shift and go to state 35

state 11

    (10) command -> RMGRP . rmgrp_parameter
    (46) rmgrp_parameter -> . DASH NAME EQUAL string_parameter

    DASH            shift and go to state 38

    rmgrp_parameter                shift and go to state 37

state 12

    (11) command -> MKUSR . mkusr_parameters
    (47) mkusr_parameters -> . mkusr_parameter mkusr_parameters
    (48) mkusr_parameters -> . mkusr_parameter
    (49) mkusr_parameter -> . DASH USER EQUAL string_parameter
    (50) mkusr_parameter -> . DASH PASS EQUAL pass_parameter
    (51) mkusr_parameter -> . DASH GRP EQUAL string_parameter

    DASH            shift and go to state 41

    mkusr_parameters               shift and go to state 39
    mkusr_parameter                shift and go to state 40

state 13

    (12) command -> RMUSR . rmusr_parameter
    (52) rmusr_parameter -> . DASH USER EQUAL string_parameter

    DASH            shift and go to state 43

    rmusr_parameter                shift and go to state 42

state 14

    (13) command -> MKFILE . mkfile_parameters
    (53) mkfile_parameters -> . mkfile_parameter mkfile_parameters
    (54) mkfile_parameters -> . mkfile_parameter
    (55) mkfile_parameter -> . DASH PATH EQUAL string_parameter
    (56) mkfile_parameter -> . DASH R
    (57) mkfile_parameter -> . DASH SIZE EQUAL NUMBER
    (58) mkfile_parameter -> . DASH CONT EQUAL string_parameter

    DASH            shift and go to state 46

    mkfile_parameters              shift and go to state 44
    mkfile_parameter               shift and go to state 45

state 15

    (14) command -> MKDIR . mkdir_parameters
    (59) mkdir_parameters -> . mkdir_parameter mkdir_parameters
    (60) mkdir_parameters -> . mkdir_parameter
    (61) mkdir_parameter -> . DASH PATH EQUAL string_parameter
    (62) mkdir_parameter -> . DASH R

    DASH            shift and go to state 49

    mkdir_parameters               shift and go to state 47
    mkdir_parameter                shift and go to state 48

state 16

    (15) command -> PAUSE .

    $end            reduce using rule 15 (command -> PAUSE .)


state 17

    (16) command -> REP . rep_parameters
    (63) rep_parameters -> . rep_parameter rep_parameters
    (64) rep_parameters -> . rep_parameter
    (65) rep_parameter -> . DASH NAME EQUAL string_parameter
    (66) rep_parameter -> . DASH PATH EQUAL string_parameter
    (67) rep_parameter -> . DASH ID EQUAL id_parameter
    (68) rep_parameter -> . DASH RUTA EQUAL string_parameter

    DASH            shift and go to state 52

    rep_parameters                 shift and go to state 50
    rep_parameter                  shift and go to state 51

state 18

    (2) command -> MKDISK mkdisk_parameters .

    $end            reduce using rule 2 (command -> MKDISK mkdisk_parameters .)


state 19

    (17) mkdisk_parameters -> mkdisk_parameter . mkdisk_parameters
    (18) mkdisk_parameters -> mkdisk_parameter .
    (17) mkdisk_parameters -> . mkdisk_parameter mkdisk_parameters
    (18) mkdisk_parameters -> . mkdisk_parameter
    (19) mkdisk_parameter -> . DASH SIZE EQUAL NUMBER
    (20) mkdisk_parameter -> . DASH PATH EQUAL string_parameter
    (21) mkdisk_parameter -> . DASH FIT EQUAL fit_parameter
    (22) mkdisk_parameter -> . DASH UNIT EQUAL unit_parameter

    $end            reduce using rule 18 (mkdisk_parameters -> mkdisk_parameter .)
    DASH            shift and go to state 20

    mkdisk_parameter               shift and go to state 19
    mkdisk_parameters              shift and go to state 53

state 20

    (19) mkdisk_parameter -> DASH . SIZE EQUAL NUMBER
    (20) mkdisk_parameter -> DASH . PATH EQUAL string_parameter
    (21) mkdisk_parameter -> DASH . FIT EQUAL fit_parameter
    (22) mkdisk_parameter -> DASH . UNIT EQUAL unit_parameter

    SIZE            shift and go to state 54
    PATH            shift and go to state 55
    FIT             shift and go to state 56
    UNIT            shift and go to state 57


state 21

    (3) command -> RMDISK rmdisk_parameter .

    $end            reduce using rule 3 (command -> RMDISK rmdisk_parameter .)


state 22

    (23) rmdisk_parameter -> DASH . PATH EQUAL string_parameter

    PATH            shift and go to state 58


state 23

    (4) command -> FDISK fdisk_parameters .

    $end            reduce using rule 4 (command -> FDISK fdisk_parameters .)


state 24

    (24) fdisk_parameters -> fdisk_parameter . fdisk_parameters
    (25) fdisk_parameters -> fdisk_parameter .
    (24) fdisk_parameters -> . fdisk_parameter fdisk_parameters
    (25) fdisk_parameters -> . fdisk_parameter
    (26) fdisk_parameter -> . DASH SIZE EQUAL NUMBER
    (27) fdisk_parameter -> . DASH PATH EQUAL string_parameter
    (28) fdisk_parameter -> . DASH NAME EQUAL string_parameter
    (29) fdisk_parameter -> . DASH UNIT EQUAL unit_parameter
    (30) fdisk_parameter -> . DASH TYPE EQUAL type_parameter
    (31) fdisk_parameter -> . DASH FIT EQUAL fit_parameter

    $end            reduce using rule 25 (fdisk_parameters -> fdisk_parameter .)
    DASH            shift and go to state 25

    fdisk_parameter                shift and go to state 24
    fdisk_parameters               shift and go to state 59

state 25

    (26) fdisk_parameter -> DASH . SIZE EQUAL NUMBER
    (27) fdisk_parameter -> DASH . PATH EQUAL string_parameter
    (28) fdisk_parameter -> DASH . NAME EQUAL string_parameter
    (29) fdisk_parameter -> DASH . UNIT EQUAL unit_parameter
    (30) fdisk_parameter -> DASH . TYPE EQUAL type_parameter
    (31) fdisk_parameter -> DASH . FIT EQUAL fit_parameter

    SIZE            shift and go to state 60
    PATH            shift and go to state 61
    NAME            shift and go to state 62
    UNIT            shift and go to state 63
    TYPE            shift and go to state 64
    FIT             shift and go to state 65


state 26

    (5) command -> MOUNT mount_parameters .

    $end            reduce using rule 5 (command -> MOUNT mount_parameters .)


state 27
